# BookSwap

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FORGOT_PASSWORD_SETUP.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  build.sh  deploy-gcp.sh  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  setup.sh  test_chat.py  verify-deployment.sh
BookSwapApp/: App.js  README.md  SETUP.md  app.json  metro.config.js  package-lock.json  package.json
BookSwapApp/src/components/: Button.js  Input.js
BookSwapApp/src/context/: AuthContext.js
BookSwapApp/src/screens/: BookOwnersScreen.js  HomeScreen.js  LoginScreen.js  MyBooksScreen.js  ProfileScreen.js  SearchScreen.js  SignupScreen.js
BookSwapApp/src/services/: apiService.js
BookSwapMobile/: APK_CONNECTION_FIX.md  App.tsx  FRONTEND_FIXES_SUMMARY.md  NPM_INSTALL_FIX.md  README.md  SWIPE_NAVIGATION_HAPTICS.md  app.json  package-lock.json  package.json
BookSwapMobile/src/components/: Avatar.tsx  AvatarSelector.tsx  BookCard.tsx  BookOwnersModal.tsx  Button.tsx  Card.tsx  Input.tsx  SimpleInput.tsx  TrustBadges.tsx  TrustScore.tsx  index.ts
BookSwapMobile/src/config/: index.ts
BookSwapMobile/src/constants/: colors.ts  spacing.ts  typography.ts
BookSwapMobile/src/contexts/: UnreadMessagesContext.tsx
BookSwapMobile/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx  SwipeableTabNavigator.tsx  TabNavigator.tsx
BookSwapMobile/src/screens/: ChatListScreen.tsx  ChatRoomScreen.tsx  ForgotPasswordScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  MyBooksScreen.tsx  ProfileScreen.tsx  RequestBooksScreen.tsx  ResetPasswordScreen.tsx  ResetSuccessScreen.tsx  SearchScreen.tsx  SignupScreen.tsx
BookSwapMobile/src/services/: api.ts
BookSwapMobile/src/types/: index.ts
BookSwapMobile/src/utils/: avatarUtils.ts  dateUtils.ts  haptics.ts  networkUtils.ts
backend/: Dockerfile  main.py  requirements.txt  service.yaml  start.py  test.py  time.py
backend/api/: auth.py  books.py  chat.py  ratings.py  requests.py  transactions.py  trust.py
backend/config/: .env  database.py  settings.py  test_db.py
backend/models/: book.py  chat.py  password_reset.py  rating.py  request.py  token.py  transaction.py  user.py
backend/schemas/: book.py  chat.py  rating.py  request.py  transaction.py  user.py
backend/scripts/: README_CITY_MIGRATION.md  add_avatar_column.py  add_email_and_password_reset.py  add_refresh_tokens.py  add_thumbnail_column.py  add_tokens_table.py  add_trust_system.py  migrate_books.py  migrate_chat.py  migrate_database.py  normalize_cities.py
backend/utils/: auth_utils.py  email_service.py  google_books.py  trust_calculator.py
